// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Double dash should not replace with double dashes when sticked with parenthesis or alphanumerical 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "--foo",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "bar--",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "(--",
          "type": "text",
        },
        {
          "type": "hardBreak",
        },
        {
          "text": "--)",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Double dash should replace double dash with a special symbol 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo – bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
